--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>爱情时间轴</title>
     <link rel="stylesheet" href="./style.css">
-    <link type="text/css" rel="stylesheet" href="node_modules/lightgallery/css/lightgallery-bundle.min.css" />
+    <link type="text/css" rel="stylesheet" href="https://myblog-1257298572.cos.ap-shanghai.myqcloud.com/loveTimeline/node_modules/lightgallery/css/lightgallery-bundle.min.css" />
 </head>
 
 <body>
@@ -335,10 +335,10 @@
         </div>
     </div>
 
-    <script src="node_modules/lightgallery/lightgallery.min.js"></script>
-    <script src="node_modules/lightgallery/plugins/thumbnail/lg-thumbnail.umd.js"></script>
-    <script src="node_modules/lightgallery/plugins/zoom/lg-zoom.umd.js"></script>
-    <script src="images.js"></script>
+    <script src="https://myblog-1257298572.cos.ap-shanghai.myqcloud.com/loveTimeline/node_modules/lightgallery/lightgallery.min.js"></script>
+    <script src="https://myblog-1257298572.cos.ap-shanghai.myqcloud.com/loveTimeline/node_modules/lightgallery/plugins/thumbnail/lg-thumbnail.umd.js"></script>
+    <script src="https://myblog-1257298572.cos.ap-shanghai.myqcloud.com/loveTimeline/node_modules/lightgallery/plugins/zoom/lg-zoom.umd.js"></script>
+    <script src="https://myblog-1257298572.cos.ap-shanghai.myqcloud.com/loveTimeline/images.js"></script>
     <script type="text/javascript">
         
         const lgContainer = document.getElementsByName('inline-gallery-container');
