--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <script src="https://myblog-1257298572.cos.ap-shanghai.myqcloud.com/loveTimeline/node_modules/lightgallery/lightgallery.min.js"></script>
     <script src="https://myblog-1257298572.cos.ap-shanghai.myqcloud.com/loveTimeline/node_modules/lightgallery/plugins/thumbnail/lg-thumbnail.umd.js"></script>
     <script src="https://myblog-1257298572.cos.ap-shanghai.myqcloud.com/loveTimeline/node_modules/lightgallery/plugins/zoom/lg-zoom.umd.js"></script>
-    <script src="https://myblog-1257298572.cos.ap-shanghai.myqcloud.com/loveTimeline/images.js"></script>
+    <script src="./images.js"></script>
     <script type="text/javascript">
         
         const lgContainer = document.getElementsByName('inline-gallery-container');
